Fixed issue aligning navbar items.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,3 @@ h1 {
 .card-title {
     color: #1a1a1a;
 }
-
-.fa-newspaper {
-    font-size: 2em;
-}
